<resources>
    <string name="app_name">CameraFlow</string>
    <string name="switch_camera">Переключить камеру</string>
    <string name="video">Видео</string>
    <string name="gallery">Галерея</string>
    <string name="photo">Фото</string>
    <string name="camera_permission_required">Требуется разрешение на использование камеры</string>
    <string name="camera_permission_rationale">Для создания фотографий и записи видео необходимо разрешение на использование камеры</string>
    <string name="storage_permission_required">Требуется разрешение на доступ к хранилищу</string>
    <string name="storage_permission_rationale">Для просмотра сохраненных фотографий и видео необходимо разрешение на доступ к медиафайлам</string>
    <string name="audio_permission_required">Требуется разрешение на запись звука для видеозаписи</string>
    <string name="audio_permission_rationale">Для записи видео со звуком необходимо разрешение на использование микрофона</string>
    <string name="permission_denied_forever">Разрешение было отклонено. Для работы приложения необходимо предоставить разрешение в настройках</string>
    <string name="open_settings">Открыть настройки</string>
    <string name="ok">ОК</string>
    <string name="delete">Удалить</string>
    <string name="cancel">Отмена</string>
    <string name="delete_confirmation">Удалить этот файл?</string>
    <string name="delete_all_confirmation">Удалить все медиафайлы?</string>
    <string name="items_count_zero">Нет элементов</string>
    <string name="items_count_one">%d элемент</string>
    <string name="items_count_few">%d элемента</string>
    <string name="items_count_many">%d элементов</string>
    <string name="error_camera_start">Ошибка запуска камеры</string>
    <string name="error_photo_save">Ошибка сохранения фото</string>
    <string name="error_video_save">Ошибка сохранения видео</string>
    <string name="error_deleting_file">Ошибка удаления файла</string>
    <string name="file_cannot_be_deleted">Этот файл нельзя удалить</string>
    <string name="file_deleted">Файл удален</string>
    <string name="no_files">Нет файлов</string>
    <string name="sort">Сортировка</string>
    <string name="menu">Меню</string>
    <string name="share">Поделиться</string>
    <string name="error_sharing">Ошибка при попытке поделиться файлом: %s</string>
    <string name="file_info">Информация о файле</string>
    <string name="file_name">Имя файла:</string>
    <string name="type">Тип:</string>
    <string name="file_size">Размер файла:</string>
    <string name="resolution">Разрешение:</string>
    <string name="duration">Длительность:</string>
    <string name="date_created">Дата создания:</string>
    <string name="uri">URI:</string>
    <string name="error_loading_media">Ошибка загрузки медиафайлов: %s</string>
    <string name="error_generic">Ошибка: %s</string>
    <string name="timer_initial">00:00:00</string>
    <string name="aspect_ratio_4_3">4:3</string>
    <string name="aspect_ratio_16_9">16:9</string>
</resources>
